--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1609,6 +1609,9 @@ margin-top: 20px;
 .single-suggest-posts{
   margin-top: 40px;
 }
+.branche-figure {
+    margin-top: 30px;
+}
 @media screen and (max-width: 768px) {
   .card-service {
     position: relative;
