--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1612,6 +1612,8 @@ margin-top: 20px;
 .branche-figure {
     margin-top: 30px;
 }
+.cc-left-col{
+      padding-right: 70px;
 @media screen and (max-width: 768px) {
   .card-service {
     position: relative;
