--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -266,14 +266,14 @@ margin: 30px 0;
       height: 100%;
       border-radius: 10px;
     }
-    section.service_sec{
+    section.service_second{
       position: relative;
     }
     .main-section p.section-desciption {
       max-width: 85%;
       margin: 2% 0;
     }
-    section.main-section.service_sec:before {
+    section.main-section.service_second:before {
       content: '';
       position: absolute;
       top: 0;
@@ -682,7 +682,7 @@ letter-spacing: 0em;
   text-transform: uppercase;
   letter-spacing: .6px;
 }
-section.main-section.service_sec{
+section.main-section.service_second{
   background-position: bottom center;
 }
 section.main-section.team_banner{
@@ -1658,7 +1658,7 @@ margin-top: 20px;
 .text-vs-center{
   text-align: center;
 }
-section.main-section.service_sec {
+section.main-section.service_second {
   background-position: bottom center;
   padding-top: 12%;
 }
