--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1295,15 +1295,14 @@ ul.tabsview.founders-tabs li.actives{
 }
 
 #lightbox {
-  z-index: 1;
-  position: fixed;
+  z-index: 99;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: rgb(255 255 255 / 86%);
   display: flex;
-  align-items: center;
   justify-content: space-between;
   flex-direction: row;
 }
