--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -511,6 +511,14 @@ section.main-section.expertise_section{
     overflow: hidden;
     background-position: left !important;
 }
+.standright-banner{
+  min-height: 563px;
+    background-image: url('../images/pages/neukunden.jpg') !important;
+    background-size: 50% auto, cover !important;
+    position: relative;
+    overflow: hidden;
+    background-position: right !important;
+}
 section.main-section.OurCustomer_section {
   padding: 4.5% 0;
 }
@@ -1175,6 +1183,16 @@ span.follow_linked {
   height: 800px;
   min-height: 300px;
 }
+.stand-banner{
+  max-height: 900px;
+  height: 650px;
+  min-height: 300px;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.stand-banner::before{
+  content: none !important;
+}
 .career-banner .carousel-caption{
 text-align: left;
 z-index: 99;
@@ -1829,6 +1847,33 @@ section.post-category-banners .carousel-caption h1{
 }
 .carousel-caption{
   top: 50% !important;
+}
+.stand-forms input, .stand-forms select {
+  width: 55%;
+  font-family: proxima-regular;
+    background: #212529;
+    margin-bottom: 20px;
+    padding: 9px 8px 3px 0px;
+    color: #fff;
+    box-shadow: none;
+    outline: none;
+    border: 0;
+    border-bottom: 1px solid #fff;
+}
+.stand-forms button{
+  width: 25%;
+  margin-top: 15px;
+}
+.stand-content{
+  padding: 5% !important;
+}
+.stand-forms input::placeholder{
+  font-family: proxima-regular !important;
+  color: #fff;
+  font-size: 16px;
+}
+.standort-partner{
+  padding: 80px 0;
 }
 @media screen and (max-width: 991px) and (min-width: 768px){
   .navbar-expand-md .navbar-collapse{
