logo footer design updation

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -835,7 +835,7 @@ footer h5{
 footer ul.social-follow{
   list-style: none;
   padding: 0;
-  display: flex;
+  display: flex !important;
   align-items: center;
   gap:20px;
   flex-direction: row;
@@ -846,6 +846,21 @@ footer ul.info-menu{
 }
 footer .footer-col {
   padding: 0 4%;
+}
+footer .footer-col ul.fot-box {
+  display: flex;
+  flex-direction: column;
+  list-style: none;
+  padding: 0;
+}
+footer .footer-col ul.fot-box ul{
+  display: block;
+} 
+footer .footer-col ul.fot-box li {
+  line-height: 50px;
+}
+footer .footer-col ul.fot-box li li{
+  line-height: 1.8;
 }
 footer ul{
   list-style: none;
@@ -859,11 +874,7 @@ list-style: none;
 padding: 0;
 display: block;
 }
-footer .footer-menu{
-    display: flex;
-    align-items: center;
-    gap: 25px;
-}
+
 footer .footer-menu li{
   font-size: 15px;
   font-family: 'proxima-regular';
