--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,21 @@
+@font-face {
+  font-family: 'proxima-bold';
+  src: url('../fonts/proxima-bold.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'proxima-medium';
+  src: url('../fonts/proxima-medium.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'proxima-regular';
+  src: url('../fonts/proximanovacond-regular.woff2') format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
 :root{
   --primary-clr : #FBB900;
   --gray-clr: #D9D8D5;
@@ -19,24 +37,6 @@ div#__next {
   height: 100%;
   position: relative;
 }
-@font-face {
-    font-family: 'proxima-bold';
-    src: url('../fonts/proxima-bold.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'proxima-medium';
-    src: url('../fonts/proxima-medium.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-  }
-  @font-face {
-    font-family: 'proxima-regular';
-    src: url('../fonts/proximanovacond-regular.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-  }
   h1,h2,h3,h4,h5{
     font-family: 'proxima-bold';
   }
@@ -502,7 +502,8 @@ section.usp_section h4{
   color: var(--dark-clr);
 }
 section.main-section{
-  overflow:hidden
+  overflow:hidden;
+  position: relative;
 }
 section.main-section.expertise_section{
   min-height: 563px;
@@ -549,7 +550,7 @@ ul.custom_logo_details li {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    width: 380px;
+    width: 255px;
     height: auto;
     max-width: 380px;
     height: 440px;
@@ -761,7 +762,7 @@ width: auto;;
 .newshome_content {
   position: absolute;
   bottom: 0;
-  padding: 8%;
+  padding: 8% 6%;
   z-index: 9;
   color: #fff;
   text-decoration: none;
@@ -801,7 +802,7 @@ section.main-section.team_banner{
 footer {
   background: #2a2a2a;
   color: #fff;
-  padding: 2.5% 0 0;
+  padding: 6% 0;
 }
 footer .last-footer{
   margin-top: 45px;
@@ -861,6 +862,15 @@ footer .footer-col ul.fot-box li {
 }
 footer .footer-col ul.fot-box li li{
   line-height: 1.8;
+}
+footer .footer-col ul.fot-box li.certifications ul {
+  display: flex;
+  flex-flow: row;
+  padding: 0;
+}
+footer .footer-col ul.fot-box li.certifications ul li img {
+  width: 45px;
+  max-width: max-content;
 }
 footer ul{
   list-style: none;
@@ -1853,7 +1863,6 @@ section.main-section.unsere-section {
 .react-responsive-modal-modal {
   width: 100%;
   text-align: center !important;
-  background: #111 !important;
   color: #fff;
   padding: 2% !important;
 }
@@ -1898,6 +1907,9 @@ section.post-category-banners .carousel-caption h1{
 }
 .main-form{
   padding-bottom: 90px;
+}
+.home-tabs-content{
+  color: #000;
 }
 @media screen and (max-width: 991px) and (min-width: 768px){
   .navbar-expand-md .navbar-collapse{
