--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1197,6 +1197,9 @@ body header.innerpages .home-nav ul li a:not(.cc-button)
 {
   color: #000;
 }
+body header.innerpages .home-nav ul li a:not(.cc-button):hover{
+  color: var(--primary-clr) !important;
+}
 body header.innerpages img{
   filter: grayscale(1) invert(1);
 }
